--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "moment": "^2.26.0",
     "vue": "^2.6.11",
     "vue-socket.io": "^3.0.9",
     "vuex": "^3.4.0"
