--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "jwt-decode": "^2.2.0",
     "moment": "^2.26.0",
     "vue": "^2.6.11",
+    "vue-router": "^3.3.2",
     "vue-socket.io": "^3.0.9",
     "vuex": "^3.4.0"
   },
